# runtime

./: .gitignore  BUILD.bazel  MODULE.bazel  defs.bzl  paket.dependencies  sync-paket.sh
eng/: Subsets.props  build.sh  run_test.sh  run_test.sh.tpl
eng/pipelines/common/: internal-variables.yml  macos-sign-with-entitlements.yml  perf-variables.yml  platform-matrix.yml  upload-intermediate-artifacts-step.yml  variables.yml
eng/testing/: RunnerTemplate.cmd  RunnerTemplate.sh  tests.singlefile.targets
paket/: paket.main.bzl
src/: BUILD.bazel
src/coreclr/: build-runtime.sh
src/coreclr/System.Private.CoreLib/: BUILD.bazel
src/coreclr/System.Private.CoreLib/src/: NativeRuntimeEventSource.Generated.cs  System.SR.cs
src/coreclr/System.Private.CoreLib/src/System/Threading/: Thread.CoreCLR.cs
src/coreclr/nativeaot/: BUILD.bazel
src/coreclr/nativeaot/System.Private.TypeLoader/src/Internal/Runtime/TypeLoader/: GenericDictionaryCell.cs  TypeLoaderEnvironment.GVMResolution.cs
src/coreclr/tools/Common/Compiler/DependencyAnalysis/: ObjectNode.cs
src/coreclr/tools/aot/ILCompiler.ReadyToRun/ObjectWriter/: SectionBuilder.cs
src/coreclr/tools/aot/crossgen2/: crossgen2.csproj
src/installer/managed/Microsoft.NET.HostModel/MachO/: MachObjectFile.cs
src/installer/managed/Microsoft.NET.HostModel/MachO/BinaryFormat/Blobs/: BlobFactory.cs  SimpleBlob.cs  SuperBlob.cs
src/libraries/: BUILD.bazel  defs.bzl
src/libraries/Common/: BUILD.bazel
src/libraries/Microsoft.Win32.Registry/: BUILD.bazel
src/libraries/System.Collections/: BUILD.bazel
src/libraries/System.Collections.Concurrent/: BUILD.bazel
src/libraries/System.Collections.Immutable/: BUILD.bazel
src/libraries/System.Collections.NonGeneric/: BUILD.bazel
src/libraries/System.ComponentModel/: BUILD.bazel
src/libraries/System.Console/: BUILD.bazel
src/libraries/System.Diagnostics.Contracts/: BUILD.bazel
src/libraries/System.Diagnostics.StackTrace/: BUILD.bazel
src/libraries/System.Diagnostics.Tracing/: BUILD.bazel
src/libraries/System.Formats.Asn1/: BUILD.bazel
src/libraries/System.IO.FileSystem.AccessControl/: BUILD.bazel  System.IO.FileSystem.AccessControl.notsupported.cs
src/libraries/System.IO.FileSystem.DriveInfo/: BUILD.bazel
src/libraries/System.IO.IsolatedStorage/: BUILD.bazel
src/libraries/System.IO.MemoryMappedFiles/: BUILD.bazel
src/libraries/System.Linq/: BUILD.bazel
src/libraries/System.Memory/: BUILD.bazel
src/libraries/System.Net.Primitives/: BUILD.bazel
src/libraries/System.Numerics.Vectors/: BUILD.bazel
src/libraries/System.ObjectModel/: BUILD.bazel
src/libraries/System.Private.CoreLib/: BUILD.bazel
src/libraries/System.Private.CoreLib/src/: BUILD.bazel  files.bzl
src/libraries/System.Private.Uri/: System.SR.cs
src/libraries/System.Reflection.Emit/: BUILD.bazel
src/libraries/System.Reflection.Emit.ILGeneration/: BUILD.bazel
src/libraries/System.Reflection.Emit.Lightweight/: BUILD.bazel
src/libraries/System.Reflection.Metadata/: BUILD.bazel
src/libraries/System.Reflection.Primitives/: BUILD.bazel
src/libraries/System.Reflection.TypeExtensions/: BUILD.bazel
src/libraries/System.Resources.Writer/: BUILD.bazel
src/libraries/System.Runtime.CompilerServices.VisualC/: BUILD.bazel
src/libraries/System.Runtime.InteropServices/: BUILD.bazel
src/libraries/System.Runtime.Intrinsics/: BUILD.bazel
src/libraries/System.Runtime.Loader/: BUILD.bazel
src/libraries/System.Runtime.Numerics/: BUILD.bazel
src/libraries/System.Runtime.Serialization.Formatters/: BUILD.bazel
src/libraries/System.Security.AccessControl/: BUILD.bazel  System.Security.AccessControl.notsupported.cs
src/libraries/System.Security.Claims/: BUILD.bazel
src/libraries/System.Security.Cryptography/: BUILD.bazel
src/libraries/System.Security.Principal.Windows/: BUILD.bazel  System.Security.Principal.Windows.notsupported.cs
src/libraries/System.Text.Encoding.Extensions/: BUILD.bazel
src/libraries/System.Threading/: BUILD.bazel
src/libraries/System.Threading.Overlapped/: BUILD.bazel
src/libraries/System.Threading.Tasks.Parallel/: BUILD.bazel
src/libraries/System.Threading.Thread/: BUILD.bazel
src/libraries/System.Threading.ThreadPool/: BUILD.bazel
src/libraries/shims/mscorlib/: BUILD.bazel
src/libraries/shims/stubs/: BUILD.bazel  System.Security.Permissions.ForwardedTypes.cs  System.Threading.AccessControl.ForwardedTypes.cs
src/tests/: BUILD.bazel  defs.bzl  live_test.bzl
src/tests/Common/: BUILD.bazel
src/tests/JIT/Directed/: BUILD.bazel
src/tests/JIT/Directed/Arrays/: BUILD.bazel
src/tests/JIT/Directed/ExcepFilters/excepobj/: BUILD.bazel
src/tests/JIT/Directed/ExcepFilters/fault/: BUILD.bazel
src/tests/JIT/Directed/ExcepFilters/mixed/: BUILD.bazel
src/tests/JIT/Directed/ExcepFilters/mixed3/: BUILD.bazel
src/tests/JIT/Directed/FaultHandlers/CallOrder/: BUILD.bazel
src/tests/JIT/Directed/FaultHandlers/Nesting/: BUILD.bazel
src/tests/JIT/Directed/FaultHandlers/Simple/: BUILD.bazel
src/tests/JIT/Directed/StrAccess/: BUILD.bazel
src/tests/JIT/Directed/StructABI/: BUILD.bazel
src/tests/JIT/Directed/StructPromote/: BUILD.bazel
src/tests/JIT/Directed/VectorABI/: BUILD.bazel
src/tests/JIT/Directed/cmov/: BUILD.bazel
src/tests/JIT/Directed/nullabletypes/: BUILD.bazel
src/tests/JIT/Directed/physicalpromotion/: BUILD.bazel
src/tests/nativeaot/SmokeTests/Regression/: Gvm77070.cs  Main.cs  Regression.csproj
src/tools/GenFacades/: BUILD.bazel  GenFacades.csproj  Logger.cs  MockEngine.cs  Program.cs
src/tools/GenerateResxSource/: BUILD.bazel  GenerateResxSource.cs  GenerateResxSource.csproj  Program.cs
src/tools/ResGen/: BUILD.bazel  BinaryFormatterByteArrayResource.cs  FileStreamResource.cs  FileUtilities.cs  IResource.cs  InputFormatNotSupportedException.cs  LiveObjectResource.cs  Logger.cs  MSBuildResXReader.cs  NameUtilities.cs  ProcessResourceFiles.cs  Program.cs  ResGen.csproj  ResGen.sln  StringResource.cs  TypeConverterByteArrayResource.cs  TypeConverterStringResource.cs
src/tools/test_proj2bazel/: Program.cs  test_proj2bazel.sln
(+35 files in other folders)
