load("@rules_dotnet//dotnet:defs.bzl", "import_library")
load("//:defs.bzl", "from_coreclr_artifacts")

load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")

exports_files([
    "eng/run_test.sh"
])

copy_to_directory(
    name = "Core_Root",
    out = "Core_Root",
    srcs =
        from_coreclr_artifacts("corerun") + select({
            "@platforms//os:linux": glob(["artifacts/bin/coreclr/linux.x64.Debug/*.so"]),
            "@platforms//os:macos": glob(["artifacts/bin/coreclr/osx.arm64.Debug/*.dylib"]),
        }) + [
            "//src/libraries:impl_netcoreapp",
        ],
    root_paths = glob(["**/corerun*"]) + glob(["**/*.dll"]) + glob(["**/*.dylib"]) + glob(["**/*.so"]) + [
        "artifacts/bin/coreclr/linux.x64.Debug",
    ] ,
    replace_prefixes = {
        "artifacts/bin/coreclr/osx.arm64.Debug": "",
        "src/coreclr/System.Private.CoreLib/impl_System.Private.CoreLib/net9.0": "",
    },
    visibility = ["//visibility:public"],
)

import_library(
    name = "TargetingPack",
    library_name = "xunit.abstractions",
    refs = [
        "artifacts/TargetingPack/xunit.assert.dll",
        "artifacts/TargetingPack/xunit.abstractions.dll",
        "artifacts/TargetingPack/xunit.core.dll",
        "artifacts/TargetingPack/Microsoft.DotNet.XUnitExtensions.dll",
    ],
    visibility = ["//visibility:public"]
)