load("@rules_dotnet//dotnet:defs.bzl", "import_library")
load("//:defs.bzl", "from_coreclr_artifacts")

load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")

exports_files([
    "eng/run_test.sh",
    "artifacts/obj/coreclr/System.Private.CoreLib/linux.x64.Debug/System.Private.CoreLib.Strings.resources",
])

copy_to_directory(
    name = "Core_Root",
    out = "Core_Root",
    srcs =
        from_coreclr_artifacts("corerun") + select({
            "@platforms//os:linux": glob([
                "artifacts/bin/coreclr/linux.x64.Debug/*.so",
                "artifacts/bin/coreclr/linux.x64.Debug/*.dbg",
                "artifacts/bin/native/net9.0-linux-Debug-x64/*.so",
                "artifacts/bin/native/net9.0-linux-Debug-x64/*.dbg",
            ]),
            "@platforms//os:macos": glob(["artifacts/bin/coreclr/osx.arm64.Debug/*.dylib"]),
        })
        + [
            "//src/libraries:impl_netcoreapp",
        ],
    root_paths = [ "**" ],
    visibility = ["//visibility:public"],
)

import_library(
    name = "TargetingPack",
    library_name = "xunit.abstractions",
    refs = [
        "artifacts/TargetingPack/xunit.assert.dll",
        "artifacts/TargetingPack/xunit.abstractions.dll",
        "artifacts/TargetingPack/xunit.core.dll",
        "artifacts/TargetingPack/Microsoft.DotNet.XUnitExtensions.dll",
    ],
    visibility = ["//visibility:public"]
)