bazel_dep(name = "rules_dotnet")
local_path_override(module_name = "rules_dotnet", path = "../rules_dotnet")

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "9.0.100-preview.7.24407.12")
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")

main_extension = use_extension("//paket:paket.main_extension.bzl", "main_extension")

use_repo(main_extension, "paket.main")

bazel_dep(name = "aspect_bazel_lib", version = "2.9.1")