
load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library"
)

csharp_library(
    name = "impl_System.Private.CoreLib",
    srcs = [],
    "libraries/Internal/Runtime/CompilerHelpers/ThrowHelpers.cs",
    "libraries/Internal/Runtime/InteropServices/ComActivationContextInternal.cs",
    "libraries/Internal/Runtime/InteropServices/ComponentActivator.CoreCLR.cs",
    "libraries/System/__Canon.cs",
    "libraries/System/ArgIterator.cs",
    "libraries/System/Array.CoreCLR.cs",
    "libraries/System/Attribute.CoreCLR.cs",
    "libraries/System/BadImageFormatException.CoreCLR.cs",
    "libraries/System/Buffer.CoreCLR.cs",
    "libraries/System/CLRConfig.cs",
    "libraries/System/Collections/EmptyReadOnlyDictionaryInternal.cs",
    "libraries/System/Collections/Generic/ArraySortHelper.CoreCLR.cs",
    "libraries/System/Collections/Generic/Comparer.CoreCLR.cs",
    "libraries/System/Collections/Generic/ComparerHelpers.cs",
    "libraries/System/Collections/Generic/EqualityComparer.CoreCLR.cs",
    "libraries/System/ComAwareWeakReference.CoreCLR.cs",
    "libraries/System/Currency.cs",
    "libraries/System/Delegate.CoreCLR.cs",
    "libraries/System/Diagnostics/Debugger.cs",
    "libraries/System/Diagnostics/EditAndContinueHelper.cs",
    "libraries/System/Diagnostics/ICustomDebuggerNotification.cs",
    "libraries/System/Diagnostics/StackFrame.CoreCLR.cs",
    "libraries/System/Diagnostics/StackFrameHelper.cs",
    "libraries/System/Diagnostics/StackTrace.CoreCLR.cs",
    "libraries/System/Enum.CoreCLR.cs",
    "libraries/System/Environment.CoreCLR.cs",
    "libraries/System/Exception.CoreCLR.cs",
    "libraries/System/GC.CoreCLR.cs",
    "libraries/System/IO/FileLoadException.CoreCLR.cs",
    "libraries/System/IO/FileNotFoundException.CoreCLR.cs",
    "libraries/System/IO/Stream.CoreCLR.cs",
    "libraries/System/Math.CoreCLR.cs",
    "libraries/System/MathF.CoreCLR.cs",
    "libraries/System/MulticastDelegate.CoreCLR.cs",
    "libraries/System/Object.CoreCLR.cs",
    "libraries/System/Reflection/Assembly.CoreCLR.cs",
    "libraries/System/Reflection/AssemblyName.CoreCLR.cs",
    "libraries/System/Reflection/Associates.cs",
    "libraries/System/Reflection/ConstructorInfo.CoreCLR.cs",
    "libraries/System/Reflection/ConstructorInvoker.CoreCLR.cs",
    "libraries/System/Reflection/Emit/CustomAttributeBuilder.cs",
    "libraries/System/Reflection/Emit/DynamicILGenerator.cs",
    "libraries/System/Reflection/Emit/DynamicMethod.CoreCLR.cs",
    "libraries/System/Reflection/Emit/RuntimeAssemblyBuilder.cs",
    "libraries/System/Reflection/Emit/RuntimeConstructorBuilder.cs",
    "libraries/System/Reflection/Emit/RuntimeEnumBuilder.cs",
    "libraries/System/Reflection/Emit/RuntimeEventBuilder.cs",
    "libraries/System/Reflection/Emit/RuntimeFieldBuilder.cs",
    "libraries/System/Reflection/Emit/RuntimeGenericTypeParameterBuilder.cs",
    "libraries/System/Reflection/Emit/RuntimeILGenerator.cs",
    "libraries/System/Reflection/Emit/RuntimeLocalBuilder.cs",
    "libraries/System/Reflection/Emit/RuntimeMethodBuilder.cs",
    "libraries/System/Reflection/Emit/RuntimeModuleBuilder.cs",
    "libraries/System/Reflection/Emit/RuntimeParameterBuilder.cs",
    "libraries/System/Reflection/Emit/RuntimePropertyBuilder.cs",
    "libraries/System/Reflection/Emit/RuntimeTypeBuilder.cs",
    "libraries/System/Reflection/Emit/SignatureHelper.cs",
    "libraries/System/Reflection/Emit/SymbolMethod.cs",
    "libraries/System/Reflection/FieldInfo.CoreCLR.cs",
    "libraries/System/Reflection/LoaderAllocator.cs",
    "libraries/System/Reflection/MdConstant.cs",
    "libraries/System/Reflection/MdFieldInfo.cs",
    "libraries/System/Reflection/MdImport.cs",
    "libraries/System/Reflection/MemberInfo.Internal.cs",
    "libraries/System/Reflection/Metadata/AssemblyExtensions.cs",
    "libraries/System/Reflection/Metadata/MetadataUpdater.cs",
    "libraries/System/Reflection/MethodBase.CoreCLR.cs",
    "libraries/System/Reflection/MethodBaseInvoker.CoreCLR.cs",
    "libraries/System/Reflection/MethodInvoker.CoreCLR.cs",
    "libraries/System/Reflection/ModifiedType.CoreCLR.cs",
    "libraries/System/Reflection/RtFieldInfo.cs",
    "libraries/System/Reflection/RuntimeAssembly.cs",
    "libraries/System/Reflection/RuntimeConstructorInfo.CoreCLR.cs",
    "libraries/System/Reflection/RuntimeCustomAttributeData.cs",
    "libraries/System/Reflection/RuntimeEventInfo.cs",
    "libraries/System/Reflection/RuntimeExceptionHandlingClause.cs",
    "libraries/System/Reflection/RuntimeFieldInfo.cs",
    "libraries/System/Reflection/RuntimeLocalVariableInfo.cs",
    "libraries/System/Reflection/RuntimeMethodBody.cs",
    "libraries/System/Reflection/RuntimeMethodInfo.CoreCLR.cs",
    "libraries/System/Reflection/RuntimeModule.cs",
    "libraries/System/Reflection/RuntimeParameterInfo.cs",
    "libraries/System/Reflection/RuntimePropertyInfo.cs",
    "libraries/System/Reflection/TypeNameResolver.CoreCLR.cs",
    "libraries/System/Reflection/Metadata/RuntimeTypeMetadataUpdateHandler.cs",
    "libraries/System/Runtime/CompilerServices/CastHelpers.cs",
    "libraries/System/Runtime/CompilerServices/RuntimeHelpers.CoreCLR.cs",
    "libraries/System/Runtime/ControlledExecution.CoreCLR.cs",
    "libraries/System/Runtime/DependentHandle.cs",
    "coreclr/nativeaot/Common/src/System/Runtime/RhFailFastReason.cs",
    "coreclr/nativeaot/Runtime.Base/src/System/Runtime/ExceptionHandling.cs",
    "coreclr/nativeaot/Runtime.Base/src/System/Runtime/ExceptionIDs.cs",
    "coreclr/nativeaot/Runtime.Base/src/System/Runtime/StackFrameIterator.cs",
    "libraries/System/Runtime/ExceptionServices/AsmOffsets.cs",
    "libraries/System/Runtime/ExceptionServices/InternalCalls.cs",
    "libraries/System/Runtime/GCSettings.CoreCLR.cs",
    "libraries/System/Runtime/JitInfo.CoreCLR.cs",
    "libraries/System/Runtime/InteropServices/DynamicInterfaceCastableHelpers.cs",
    "libraries/System/Runtime/InteropServices/GCHandle.CoreCLR.cs",
    "libraries/System/Runtime/InteropServices/Marshal.CoreCLR.cs",
    "libraries/System/Runtime/InteropServices/MemoryMarshal.CoreCLR.cs",
    "libraries/System/Runtime/InteropServices/NativeLibrary.CoreCLR.cs",
    "libraries/System/Runtime/Intrinsics/X86/X86Base.CoreCLR.cs",
    "libraries/System/Runtime/Loader/AssemblyLoadContext.CoreCLR.cs",
    "libraries/System/RuntimeArgumentHandle.cs",
    "libraries/System/RuntimeHandles.cs",
    "libraries/System/RuntimeType.ActivatorCache.cs",
    "libraries/System/RuntimeType.CoreCLR.cs",
    "libraries/System/StartupHookProvider.CoreCLR.cs",
    "libraries/System/String.CoreCLR.cs",
    "libraries/System/StubHelpers.cs",
    "libraries/System/Text/StringBuilder.CoreCLR.cs",
    "libraries/System/Threading/Interlocked.CoreCLR.cs",
    "libraries/System/Threading/Monitor.CoreCLR.cs",
    "libraries/System/Threading/SynchronizationContext.CoreCLR.cs",
    "libraries/System/Threading/Thread.CoreCLR.cs",
    "libraries/System/Threading/ThreadPool.CoreCLR.cs",
    "libraries/System/Threading/WaitHandle.CoreCLR.cs",
    "libraries/System/Type.CoreCLR.cs",
    "libraries/System/TypedReference.CoreCLR.cs",
    "libraries/System/TypeLoadException.CoreCLR.cs",
    "libraries/System/ValueType.cs",
    "libraries/Common/src/System/Collections/Generic/ArrayBuilder.cs",
    "libraries/System/Experimentals.cs",
    "libraries/src/System/RuntimeType.BoxCache.cs",
    "libraries/src/System/RuntimeType.CreateUninitializedCache.CoreCLR.cs",
    "libraries/src/System/RuntimeType.GenericCache.cs",
  </ItemGroup>
  <ItemGroup Condition="'$(FeatureComWrappers)' == 'true'">
    <Compile Include="$(BclSourcesRoot)\System\Runtime\InteropServices\ComWrappers.cs" />
  </ItemGroup>
  <ItemGroup Condition="'$(FeatureCominterop)' == 'true'">
    <Compile Include="$(CommonPath)System\Runtime\InteropServices\IDispatch.cs">
      <Link>Common\System\Runtime\InteropServices\IDispatch.cs</Link>
    </Compile>
    <Compile Include="$(CommonPath)System\Runtime\InteropServices\ComEventsMethod.cs">
      <Link>Common\System\Runtime\InteropServices\ComEventsMethod.cs</Link>
    </Compile>
    <Compile Include="$(CommonPath)System\Runtime\InteropServices\ComEventsSink.cs">
      <Link>Common\System\Runtime\InteropServices\ComEventsSink.cs</Link>
    </Compile>
    <Compile Include="$(CommonPath)System\Runtime\InteropServices\BuiltInVariantExtensions.cs">
      <Link>Common\System\Runtime\InteropServices\BuiltInVariantExtensions.cs</Link>
    </Compile>
    <Compile Include="$(BclSourcesRoot)\Internal\Runtime\InteropServices\ComActivator.cs" />
    <Compile Include="$(BclSourcesRoot)\Microsoft\Win32\OAVariantLib.cs" />
    <Compile Include="$(BclSourcesRoot)\System\__ComObject.cs" />
    <Compile Include="$(BclSourcesRoot)\System\OleAutBinder.cs" />
    <Compile Include="$(BclSourcesRoot)\System\Runtime\InteropServices\ComEventsHelper.cs" />
    <Compile Include="$(BclSourcesRoot)\System\Runtime\InteropServices\ComEventsInfo.cs" />
    <Compile Include="$(BclSourcesRoot)\System\Runtime\InteropServices\CustomMarshalers\ComDataHelpers.cs" />
    <Compile Include="$(BclSourcesRoot)\System\Runtime\InteropServices\CustomMarshalers\EnumVariantViewOfEnumerator.cs" />
    <Compile Include="$(BclSourcesRoot)\System\Runtime\InteropServices\CustomMarshalers\EnumeratorToEnumVariantMarshaler.cs" />
    <Compile Include="$(BclSourcesRoot)\System\Runtime\InteropServices\CustomMarshalers\EnumeratorViewOfEnumVariant.cs" />
    <Compile Include="$(BclSourcesRoot)\System\Runtime\InteropServices\CustomMarshalers\ExpandoToDispatchExMarshaler.cs" />
    <Compile Include="$(BclSourcesRoot)\System\Runtime\InteropServices\CustomMarshalers\TypeToTypeInfoMarshaler.cs" />
    <Compile Include="$(BclSourcesRoot)\System\Variant.cs" />
  </ItemGroup>
  <ItemGroup Condition="'$(FeatureCominterop)' != 'true'">
    <Compile Include="$(BclSourcesRoot)\Internal\Runtime\InteropServices\ComActivator.PlatformNotSupported.cs" />
  </ItemGroup>
  <ItemGroup Condition="'$(TargetsUnix)' == 'true'">
    <Compile Include="$(BclSourcesRoot)\Internal\Runtime\InteropServices\InMemoryAssemblyLoader.PlatformNotSupported.cs" />
    <Compile Include="$(BclSourcesRoot)\Interop\Unix\Interop.Libraries.cs" />
    <Compile Include="$(BclSourcesRoot)\System\Threading\LowLevelLifoSemaphore.Unix.cs" />
    <Compile Include="$(BclSourcesRoot)\System\Threading\Mutex.CoreCLR.Unix.cs" />
  </ItemGroup>
  <ItemGroup Condition="'$(TargetsWindows)' == 'true'">
    <Compile Include="$(BclSourcesRoot)\Internal\Runtime\InteropServices\InMemoryAssemblyLoader.cs" />
    <Compile Include="$(CommonPath)Interop\Windows\OleAut32\Interop.VariantClear.cs">
      <Link>Common\Interop\Windows\OleAut32\Interop.VariantClear.cs</Link>
    </Compile>
    <Compile Include="$(CommonPath)Interop\Windows\OleAut32\Interop.VariantChangeTypeEx.cs">
      <Link>Common\Interop\Windows\OleAut32\Interop.VariantChangeTypeEx.cs</Link>
    </Compile>
  </ItemGroup>
  <ItemGroup Condition="'$(FeatureObjCMarshal)' == 'true'">
    <Compile Include="$(BclSourcesRoot)\System\Runtime\InteropServices\ObjectiveCMarshal.CoreCLR.cs" />
  </ItemGroup>
    nullable = "enable",
    allow_unsafe_blocks = True,
    target_frameworks = [ "net9.0" ],
    disable_implicit_framework_refs = True,
    compiler_options = [ "/runtimemetadataversion:v4.0.30319" ],
    nowarn = nowarn
)