load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library"
)

load(
    "//:defs.bzl",
    "NETCOREAPP_CURRENT"
)

load("defs.bzl", "netcoreapp_ref_assembly", "netcoreapp_impl_library")

nowarn = [ "CS8500", "CS8969" ]

ref_assembly_nowarns = [
    # Ref assemblies use 'throw null'
    "CS8597",
    # Fields are unused
    "CS0169", "CS0649", "CS8618",
    # Fields are not assigned in ctors
    "CS8618",
    # Call base constructors with null literals
    "CS8625"
]

filegroup(
    name = "impl_netcoreapp",
    srcs = [
        "//src/coreclr/System.Private.CoreLib:impl_System.Private.CoreLib",
        ":impl_System.Runtime",
    ],
    visibility = ["//visibility:public"],
)

csharp_library(
    name = "ref_System.Private.CoreLib",
    out = "System.Private.CoreLib",
    srcs = [
        "Microsoft.Win32.Primitives/ref/Microsoft.Win32.Primitives.cs",
        "System.Diagnostics.Contracts/ref/System.Diagnostics.Contracts.cs",
        "System.Diagnostics.Tracing/ref/System.Diagnostics.Tracing.cs",
        "System.Diagnostics.Tracing/ref/System.Diagnostics.Tracing.Counters.cs",
        "System.Numerics.Vectors/ref/System.Numerics.Vectors.cs",
        "System.Reflection.Emit.ILGeneration/ref/System.Reflection.Emit.ILGeneration.cs",
        "System.Reflection.Emit.Lightweight/ref/System.Reflection.Emit.Lightweight.cs",
        "System.Reflection.Emit/ref/System.Reflection.Emit.cs",
        "System.Reflection.Primitives/ref/System.Reflection.Primitives.cs",
        "System.Runtime.Intrinsics/ref/System.Runtime.Intrinsics.cs",
        "System.Runtime.Loader/ref/System.Runtime.Loader.cs",
        "System.Runtime/ref/System.Runtime.cs",
        "System.Text.Encoding.Extensions/ref/System.Text.Encoding.Extensions.cs",
        "System.Threading.Overlapped/ref/System.Threading.Overlapped.cs",
        "System.Threading.ThreadPool/ref/System.Threading.ThreadPool.cs",
        "System.Threading.Thread/ref/System.Threading.Thread.cs",

        # contracts where types were partially moved to CoreLib, these are used both here and in the contract assemblies and are generated -->
        "System.Collections.Concurrent/ref/System.Collections.Concurrent.cs",
        "System.Collections/ref/System.Collections.cs",
        "System.Diagnostics.StackTrace/ref/System.Diagnostics.StackTrace.cs",
        "System.Memory/ref/System.Memory.cs",
        "//src/libraries/System.Runtime.InteropServices:ref/System.Runtime.InteropServices.cs",
        "System.Threading/ref/System.Threading.cs",

        # types only exposed through CoreLib, this is manually maintained -->
        "//src/libraries/System.Private.CoreLib:ref/System.Private.CoreLib.ExtraApis.cs",

        # types not exposed in contracts but forwarded from the mscorlib shim, this is manually maintained -->
        "//src/libraries/System.Private.CoreLib:ref/System.Private.CoreLib.ManualShimTypeForwards.cs",
    ],
    nullable = "enable",
    allow_unsafe_blocks = True,
    target_frameworks = [ "net9.0" ],
    disable_implicit_framework_refs = True,
    defines = ["BUILDING_CORELIB_REFERENCE"],
    compiler_options = [
        "/runtimemetadataversion:v4.0.30319",
        "/checksumalgorithm:SHA256",
        "/publicsign+",
    ],
    keyfile = "@@_main~main_extension~nuget.microsoft.dotnet.arcade.sdk.v9.0.0-beta.24423.2//:tools/snk/MSFT.snk",
    nowarn = nowarn + ref_assembly_nowarns + [
        # disable warnings about obsolete APIs,
        # Remove warning disable when nullable attributes are respected,
        # Type has no accessible constructors which use only CLS-compliant types
        "CS0809", "CS0618", "CS8614", "CS3015"
    ],
    visibility = ["//visibility:public"]
)

netcoreapp_ref_assembly(
    name = "System.Runtime",
    srcs = [
        "System.Runtime/ref/System.Runtime.cs",
    ],
    compiler_options = [
        "/runtimemetadataversion:v4.0.30319",
    ],
    allow_unsafe_blocks = True,
    nowarn = [ "CS0169", "CS0809", "CS0618", "CS3015" ]
)

netcoreapp_impl_library(
    name = "System.Private.Uri",
    srcs = [
        "//src/libraries/Common:src/System/Collections/Generic/ArrayBuilder.cs",
        "//src/libraries/Common:src/System/HexConverter.cs",
        "//src/libraries/Common:src/System/Obsoletions.cs",
        "//src/libraries/Common:src/System/Net/IPv4AddressHelper.Common.cs",
        "//src/libraries/Common:src/System/Net/IPv6AddressHelper.Common.cs",
        "//src/libraries/Common:src/System/Text/ValueStringBuilder.cs",

        "System.Private.Uri/src/System/DomainNameHelper.cs",
        "System.Private.Uri/src/System/GenericUriParser.cs",
        "System.Private.Uri/src/System/IPv4AddressHelper.cs",
        "System.Private.Uri/src/System/IPv6AddressHelper.cs",
        "System.Private.Uri/src/System/IriHelper.cs",
        "System.Private.Uri/src/System/PercentEncodingHelper.cs",
        "System.Private.Uri/src/System/UncNameHelper.cs",
        "System.Private.Uri/src/System/Uri.cs",
        "System.Private.Uri/src/System/UriBuilder.cs",
        "System.Private.Uri/src/System/UriCreationOptions.cs",
        "System.Private.Uri/src/System/UriEnumTypes.cs",
        "System.Private.Uri/src/System/UriExt.cs",
        "System.Private.Uri/src/System/UriFormatException.cs",
        "System.Private.Uri/src/System/UriHelper.cs",
        "System.Private.Uri/src/System/UriHostNameType.cs",
        "System.Private.Uri/src/System/UriParserTemplates.cs",
        "System.Private.Uri/src/System/UriPartial.cs",
        "System.Private.Uri/src/System/UriScheme.cs",
        "System.Private.Uri/src/System/UriSyntax.cs",
        "System.Private.Uri/src/System/ValueStringBuilderExtensions.cs",

        "System.Private.Uri/System.SR.cs",
        "//src/libraries/Common:src/System/SR.cs",
    ],
    deps = [
        ":ref_System.Private.CoreLib",
    ],
    allow_unsafe_blocks = True,
)

netcoreapp_impl_library(
    name = "System.Runtime",
    srcs = [
        "System.Runtime/src/System.Runtime.Typeforwards.cs",
    ],
    deps = [
        ":ref_System.Private.CoreLib",
        ":impl_System.Private.Uri",
    ],
    generate_facades = True,
    facade_contract_assembly = ":ref_System.Runtime",
    facade_omit_types = [
        "System.Void",
    ]
)

netcoreapp_ref_assembly(
    name = "System.Console",
    srcs = [
        "System.Console/ref/System.Console.cs",
    ],
    deps = [
        ":ref_System.Runtime",
    ],
)

netcoreapp_ref_assembly(
    name = "System.Collections",
    srcs = [
        "System.Collections/ref/System.Collections.cs",
    ],
    deps = [
        ":ref_System.Runtime",
    ],
)


netcoreapp_ref_assembly(
    name = "System.Collections.NonGeneric",
    srcs = [
        "System.Collections.NonGeneric/ref/System.Collections.NonGeneric.cs",
        "System.Collections.NonGeneric/ref/System.Collections.NonGeneric.Forwards.cs",
    ],
    deps = [
        ":ref_System.Runtime",
    ],
)

netcoreapp_ref_assembly(
    name = "System.ComponentModel",
    srcs = [
        "System.ComponentModel/ref/System.ComponentModel.cs",
    ],
    deps = [
        ":ref_System.Runtime",
    ],
)

netcoreapp_ref_assembly(
    name = "System.Diagnostics.FileVersionInfo",
    srcs = [
        "System.Diagnostics.FileVersionInfo/ref/System.Diagnostics.FileVersionInfo.cs",
    ],
    deps = [
        ":ref_System.Runtime",
    ],
)

netcoreapp_ref_assembly(
    name = "System.ObjectModel",
    srcs = [
        "System.ObjectModel/ref/System.ObjectModel.cs",
        "System.ObjectModel/ref/System.ObjectModel.Forwards.cs",
    ],
    deps = [
        ":ref_System.Runtime",
        ":ref_System.Collections",
    ],
)
netcoreapp_ref_assembly(
    name = "System.ComponentModel.Primitives",
    srcs = [
        "System.ComponentModel.Primitives/ref/System.ComponentModel.Primitives.cs",
    ],
    deps = [
        ":ref_System.Runtime",
        ":ref_System.ObjectModel",
        ":ref_System.Collections.NonGeneric",
        ":ref_System.ComponentModel",
    ],
)

netcoreapp_ref_assembly(
    name = "System.Collections.Specialized",
    srcs = [
        "System.Collections.Specialized/ref/System.Collections.Specialized.cs",
    ],
    deps = [
        ":ref_System.Runtime",
        ":ref_System.ComponentModel.Primitives",
    ],
)

netcoreapp_ref_assembly(
    name = "System.Runtime.InteropServices",
    srcs = [
        "//src/libraries/System.Runtime.InteropServices:ref/System.Runtime.InteropServices.cs",
        "//src/libraries/System.Runtime.InteropServices:ref/System.Runtime.InteropServices.Forwards.cs",
    ],
    deps = [
        ":ref_System.Runtime",
        ":ref_System.Collections",
    ],
    allow_unsafe_blocks = True,
)

netcoreapp_ref_assembly(
    name = "System.Diagnostics.Process",
    srcs = [
        "System.Diagnostics.Process/ref/System.Diagnostics.Process.cs",
    ],
    deps = [
        ":ref_System.Runtime",
        ":ref_System.Runtime.InteropServices",
        ":ref_System.ComponentModel.Primitives",
        ":ref_System.Collections.Specialized",
        ":ref_System.Collections.NonGeneric",
        ":ref_System.Diagnostics.FileVersionInfo",
    ],
)